--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/btn_magician"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:text="@string/find"/>
+
+    <Button
+        android:id="@+id/btn_volunteer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:text="@string/volunteer"/>
 
     <TextView
         android:id="@+id/mobile_magic_logo"
@@ -14,59 +31,36 @@
         android:textSize="24sp"
         android:text="@string/app_name" />
 
-    <!--<RelativeLayout-->
-        <!--android:id="@+id/paired_fragment"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_below="@id/mobile_magic_logo">-->
-
-        <!--<TextView-->
-            <!--android:id="@+id/paired_devices_header"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:textSize="18sp"-->
-            <!--android:padding="16dp"-->
-            <!--android:text="@string/title_paired_devices"/>-->
-
-        <!--<ListView-->
-            <!--android:id="@+id/paired_devices"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_below="@id/paired_devices_header">-->
-        <!--</ListView>-->
-
-    <!--</RelativeLayout>-->
-
-    <RelativeLayout
-        android:id="@+id/discover_fragment"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/paired_fragment"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/mobile_magic_logo">
+        android:orientation="vertical"
+        android:layout_below="@id/mobile_magic_logo"
+        android:layout_above="@id/btn_volunteer">
 
         <TextView
-            android:id="@+id/discover_devices_header"
+            android:id="@+id/paired_devices_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:padding="16dp"
-            android:text="@string/title_other_devices"/>
+            android:text="@string/title_paired_devices"/>
 
         <ListView
-            android:id="@+id/other_devices"
-            android:layout_width="wrap_content"
+            android:id="@+id/paired_devices"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/discover_devices_header">
+            android:stackFromBottom="true">
         </ListView>
 
         <Button
-            android:id="@+id/vibrate_button"
+            android:id="@+id/btn_add_remove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/other_devices"
-            android:text="Vibrate"/>
+            android:layout_margin="16dp"
+            android:text="@string/add_remove"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
 </RelativeLayout>
