--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,22 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/btn_magician"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:text="@string/find"/>
-
-    <Button
-        android:id="@+id/btn_volunteer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:text="@string/volunteer"/>
-
     <TextView
         android:id="@+id/mobile_magic_logo"
         android:layout_width="wrap_content"
@@ -31,36 +15,19 @@
         android:textSize="24sp"
         android:text="@string/app_name" />
 
-    <LinearLayout
-        android:id="@+id/paired_fragment"
+    <Button
+        android:id="@+id/btn_magician"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@id/mobile_magic_logo"
-        android:layout_above="@id/btn_volunteer">
+        android:layout_centerInParent="true"
+        android:text="@string/magician_mode"/>
 
-        <TextView
-            android:id="@+id/paired_devices_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:padding="16dp"
-            android:text="@string/title_paired_devices"/>
-
-        <ListView
-            android:id="@+id/paired_devices"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:stackFromBottom="true">
-        </ListView>
-
-        <Button
-            android:id="@+id/btn_add_remove"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="@string/add_remove"/>
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_volunteer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_below="@id/btn_magician"
+        android:text="@string/volunteer_mode"/>
 
 </RelativeLayout>
