--- a/app/src/main/res/layout/activity_choose_card.xml
+++ b/app/src/main/res/layout/activity_choose_card.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.icarus.mobilemagic.ChooseCardActivity">
+    android:background="@color/colorPrimaryDark"
+    android:gravity="center"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/text_select_card"
@@ -16,37 +14,25 @@
         android:layout_height="wrap_content"
         android:text="@string/select_card"
         android:padding="16dp"
+        android:textSize="24sp"
+        android:textColor="@color/colorAccent"
         android:layout_centerHorizontal="true"/>
 
     <Button
-        android:id="@+id/one"
-        android:layout_width="match_parent"
+        android:id="@+id/shuffle_button"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/text_select_card"
-        android:text="One"/>
-    <Button
-        android:id="@+id/two"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:text="@string/shuffle"/>
+
+    <GridView
+        android:id="@+id/grid_cards"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/one"
-        android:text="Two"/>
-    <Button
-        android:id="@+id/three"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/two"
-        android:text="Three"/>
-    <Button
-        android:id="@+id/four"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/three"
-        android:text="Four"/>
-    <Button
-        android:id="@+id/five"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/four"
-        android:text="Five"/>
+        android:layout_height="match_parent"
+        android:numColumns="4"
+        android:layout_below="@id/text_select_card">
+
+    </GridView>
 
 </RelativeLayout>
