--- a/app/src/main/res/layout/activity_show_card.xml
+++ b/app/src/main/res/layout/activity_show_card.xml
@@ -4,10 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:padding="16dp"
+    android:background="@color/colorPrimaryDark"
     tools:context="com.icarus.mobilemagic.ShowCardActivity">
 
     <TextView
@@ -15,6 +13,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Waiting for volunteer to choose a card"/>
+        android:textAlignment="center"
+        android:textColor="@color/colorAccent"
+        android:text="@string/magician_volunteer_found"/>
+
+    <ImageView
+        android:id="@+id/chosen_card_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
