--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.icarus.mobilemagic.ConnectActivity">
+    tools:context="com.icarus.mobilemagic.ConnectActivity"
+    android:background="@drawable/background">
 
     <LinearLayout
         android:id="@+id/paired_fragment"
@@ -16,20 +17,22 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <ImageView
             android:id="@+id/id_connect_instructions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:src="@drawable/find_magician"
             android:text="@string/connect_instructions"/>
 
-        <TextView
-            android:id="@+id/paired_devices_header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:padding="16dp"
-            android:text="@string/title_paired_devices"/>
+        <!--<TextView-->
+            <!--android:id="@+id/paired_devices_header"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="18sp"-->
+            <!--android:padding="16dp"-->
+            <!--android:text="@string/title_paired_devices"-->
+            <!--android:textColor="@android:color/white"/>-->
 
         <ListView
             android:id="@+id/paired_devices"
