--- a/app/src/main/res/layout/activity_magician.xml
+++ b/app/src/main/res/layout/activity_magician.xml
@@ -8,17 +8,16 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.icarus.mobilemagic.MagicianActivity">
+    tools:context="com.icarus.mobilemagic.MagicianActivity"
+    android:background="@drawable/background">
 
-    <TextView
+    <ImageView
         android:id="@+id/mobile_magic_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
         android:padding="30dp"
-        android:textSize="24sp"
-        android:text="@string/app_name" />
+        android:src="@drawable/logo"/>
 
     <TextView
         android:id="@+id/magician_mode"
@@ -37,11 +36,11 @@
         android:layout_below="@id/magician_mode"
         android:text="@string/magician_listening"/>
 
-    <TextView
-        android:id="@+id/chosen_card"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:textAlignment="center"/>
+    <!--<TextView-->
+        <!--android:id="@+id/chosen_card"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:textAlignment="center"/>-->
 
 </RelativeLayout>
