--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,54 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:gravity="center">
 
-    <TextView
+    <ImageView
         android:id="@+id/mobile_magic_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:padding="30dp"
-        android:textSize="24sp"
-        android:text="@string/app_name" />
+        android:src="@drawable/logo"/>
+
+    <ImageView
+        android:id="@+id/select_role"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/mobile_magic_logo"
+        android:src="@drawable/select_role"
+        android:layout_margin="16dp"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:id="@+id/btn_magician"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="@string/magician_mode"/>
+        android:layout_below="@id/select_role"
+        android:background="@drawable/the_magician"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="16dp"
+        android:padding="16dp"/>
+
+    <ImageView
+        android:id="@+id/or"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/btn_magician"
+        android:src="@drawable/or"
+        android:layout_margin="16dp"/>
 
     <Button
         android:id="@+id/btn_volunteer"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_below="@id/btn_magician"
-        android:text="@string/volunteer_mode"/>
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/or"
+        android:background="@drawable/the_volunteer"
+        android:layout_margin="16dp"
+        android:padding="16dp"/>
 
 </RelativeLayout>
