--- a/app/src/main/res/layout/activity_magician.xml
+++ b/app/src/main/res/layout/activity_magician.xml
@@ -19,28 +19,13 @@
         android:padding="30dp"
         android:src="@drawable/logo"/>
 
-    <TextView
-        android:id="@+id/magician_mode"
+    <ImageView
+        android:id="@+id/waiting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:padding="16dp"
-        android:text="@string/magician_mode"/>
-
-    <TextView
-        android:id="@+id/magician_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:src="@drawable/waiting"
         android:layout_centerHorizontal="true"
-        android:textAlignment="center"
-        android:layout_below="@id/magician_mode"
-        android:text="@string/magician_listening"/>
-
-    <!--<TextView-->
-        <!--android:id="@+id/chosen_card"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:textAlignment="center"/>-->
+        android:layout_below="@id/mobile_magic_logo"
+        android:layout_marginTop="48dp"/>
 
 </RelativeLayout>
