--- a/app/src/main/res/layout/activity_show_card.xml
+++ b/app/src/main/res/layout/activity_show_card.xml
@@ -5,17 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    android:background="@color/colorPrimaryDark"
-    tools:context="com.icarus.mobilemagic.ShowCardActivity">
+    tools:context="com.icarus.mobilemagic.ShowCardActivity"
+    android:background="@drawable/background">
 
-    <TextView
+    <ImageView
         android:id="@+id/id_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:text="@string/magician_volunteer_found"/>
+        android:src="@drawable/found"/>
 
     <ImageView
         android:id="@+id/chosen_card_image"
